--- a/Simon.html
+++ b/Simon.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simon Say Game</title>
     <link rel="stylesheet" href="Simon.css">
+    <link rel="stylesheet" href="a.css">
 </head>
 <body>
       <h1>Simon Game</h1>
